--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -311,6 +311,15 @@
           }
         }
       }
+      .team-member-wrapper{
+        .elementor-container{
+          .elementor-column{
+            .elementor-widget-wrap{
+              padding: 0 16px !important;
+            }
+          }
+        }
+      }
   }
 }
 // Pricing-area 
